--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,6 +5,17 @@
 */
 
 :root.theme-dark {
+  --bg-color: #000028;
+  --text-color-title: #000028;
+  --text-color: #F1B2CE;
+  --accent-title-color: #DB00FF;
+  --accent-color: #FF0070;
+  --content-title-color: #FF0070;
+  --decorated-zone-color: #FF0070;
+  --text--menu-color: #FF0070;
+  --button-hover-color: #FF007066;
+  --accent-button-color: #FF0070;
+  --bg-image-dark: url(../images/cover-image-dark.png);
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
@@ -12,5 +23,19 @@
 }
 
 .theme-dark .page {
+  background-image: var(--bg-image-dark);
   /* Вам также нужно будет написать ряд подобных селекторов */
+}
+
+.theme-dark .decoration-element {
+  display: flex;
+  position: absolute;
+  font-family: var(--main-font), sans-serif;
+  font-weight: var(--n-font-weight);
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--accent-color);
+  justify-self: end;
+  gap: 10px;
+  right: 11px;
 }
