--- a/styles/style.css
+++ b/styles/style.css
@@ -20,8 +20,8 @@
   block-size: 100vh;
   min-height: 668px;
   align-items: center;
-  padding-block: 10px;
-  padding-inline: 10px;
+  padding-block: var(--mob-padding);
+  padding-inline: var(--mob-padding);
 }
 
 /* Декоративные элементы header (footer) */
@@ -41,14 +41,14 @@
 }
 
 .decorated-zone::before {
-  top: 10px; 
-  right: 10px;
+  top: var(--mob-padding); 
+  right: var(--mob-padding);
   border-width: 1px 1px 0 0;
 }
 
 .decorated-zone::after {
-  bottom: 10px; 
-  left: 10px;
+  bottom: var(--mob-padding); 
+  left: var(--mob-padding);
   border-width: 0 0 1px 1px ;
 }
 
@@ -58,8 +58,8 @@
   align-items: center;
   position: absolute;
   justify-self: end;
-  top: 10px;
-  gap: 10px;
+  top: var(--mob-padding);
+  gap: var(--mob-padding);
   right: 19px;
 }
 
@@ -141,13 +141,13 @@
   color: var(--accent-title-color);
 }
 
-.title {
+.header__text {
   font-family: var(--main-font), sans-serif;
   font-weight: var(--b-font-weight);
   font-size: var(--text-font-size);
 }
 
-.title-decor {
+.text-decor {
   color: var(--text-color-title);
   background-color: var(--accent-color);
 }
@@ -158,7 +158,7 @@
   gap: 50px;
   margin-block-start: 40px;
   margin-block-end: 40px;
-  padding-inline: 10px;
+  padding-inline: var(--mob-padding);
 }
 
 .content__section {
@@ -216,7 +216,7 @@
   border-bottom: 1px solid var(--text-color);
 }
 
-/* Секция галлереи !!!!!!!!!!!!!!!!*/
+/* Секция галлереи*/
 .gallery {
   display: grid;
   gap: 10px;
@@ -238,11 +238,12 @@
 /* Footer */
 
 .footer {
-  display: grid;
+  display: flex;
+  justify-content: center;
   height: 100vh;
   min-height: 668px;
-  padding-block: 10px;
-  padding-inline: 10px;
+  padding-block: var(--mob-padding);
+  padding-inline: var(--mob-padding);
 }
 
 .footer__accent-title {
@@ -259,8 +260,8 @@
 @media (width >= 768px) {
   .header {
     min-height: 1024px;
-    padding-block: 20px;
-    padding-inline: 20px;
+    padding-block: var(--desk-padding);
+    padding-inline: var(--desk-padding);
   }
 
   .header__theme-menu {
@@ -280,16 +281,16 @@
   }
 
   .decorated-zone::before {
-    top: 20px; 
-    right: 20px;
+    top: var(--desk-padding); 
+    right: var(--desk-padding);
   }
   
   .decorated-zone::after {
-    bottom: 20px; 
-    left: 20px;
+    bottom: var(--desk-padding); 
+    left: var(--desk-padding);
   }
 
-  .title {
+  .header__text {
     justify-self: end;
     align-self: center;
     max-inline-size: 50%;
@@ -299,7 +300,7 @@
     gap: 80px;
     margin-block-start: 60px;
     margin-block-end: 60px;
-    padding-inline: 20px;
+    padding-inline: var(--desk-padding);
   }
 
   .content__section {
@@ -325,29 +326,38 @@
   }
 
   .gallery__list {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3,1fr);
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
     gap: 20px;
-    max-height: 780px;
   }
 
   .gallery__item:nth-child(1) {
-    grid-column: span 2;
+    grid-column: 1/3;
+    grid-row: 1;
   }
   .gallery__item:nth-child(2) {
-    grid-row: span 2;
+    grid-column: 3;
+    grid-row: 1/3;
   }
+
   .gallery__item:nth-child(3) {
-    grid-row: span 2;
+    grid-column: 1;
+    grid-row: 2/4;
+  }
+
+  .gallery__item:nth-child(4) {
+    grid-column: 2;
+    grid-row: 2;
   }
   .gallery__item:nth-child(5) {
-    grid-column: span 2;
+    grid-column: 2/4;
+    grid-row: 3;
   }
 
   .footer {
     min-height: 1024px;
-    padding-block: 20px;
-    padding-inline: 20px;
+    padding-block: var(--desk-padding);
+    padding-inline: var(--desk-padding);
   }
 
   .footer__accent-title {
@@ -360,8 +370,6 @@
 @media (width >= 1024px) {
   .header {
     min-height: 768px;
-    padding-block: 20px;
-    padding-inline: 20px;
   }
 
   .header__theme-menu {
@@ -384,10 +392,6 @@
 
   .content__section-special .content__section-article {
     grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  .gallery__list {
-    max-height: 1048px;
   }
 
   .footer {
